tests/invalid/type/arity_json_encode_too_few.pts
import JSON;

function main() : void {
    string s = JSON.encode();
}
